2000-12-19  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/iconify.jl (iconify-window,
	uniconify-window): support `group' and `transients'
	[un]iconification modes better. Don't use a recursive method,
	instead identify all the windows to be changed, then do
	everything in one go. For `transients' mode, only change state
	of shared transients if they [will] have no visible parents
	left

	* sawfish/wm/commands/groups.jl (iconify-group,
	uniconify-group, iconify-transient-group,
	uniconify-transient-group): use [un]iconify-window to implement
	these (by temporarily binding the necessary special variables)

	[ Last two changes fix #5252 ]

	* sawfish/wm/util/keymap.jl (where-is,
	make-memoizing-where-is): use substitute-wm-modifier to avoid
	showing W- in results

	* sawfish/wm/util/decode-events.jl (substitute-wm-modifier):
	new function, given an event, replaces the W- bit by whatever
	it's actually assigned to

	* sawfish/wm/state/gnome.jl (gnome-client-message-handler):
	handle a _WIN_HINTS client message type, format is similar to
	_WIN_STATE message

	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): removed
	the hardcoding of the `avoid' property for the panel. (George
	Lebl asked me to)

2000-12-18  John Harper  <jsh@eazel.com>

	* sawfish/wm/menus.jl (menus-include-shortcuts): new option,
	when set, include `shortcut' attributes in created menu
	descriptions. Adapted from Unai Uribarri <unaiur@telecable.es>

	* sawfish/wm/util/keymap.jl (make-memoizing-where-is): new
	function, when called repeatedly has better time complexity
	than multiple calls to where-is (since it builds a temporary
	hash table)

2000-12-10  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/stacking.jl (raise-window*, lower-window*,
	raise-lower-window*): added doc strings

	* sawfish/wm/gaol.jl (safe-functions): added font-ascent and
	font-descent

2000-12-09  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/display-wininfo.jl (event-handler): removed